Include call location data in AST and stack trace